<resources>
    <string name="app_name">Food Order</string>
    <string name="close_drawer">Close drawer</string>
    <string name="open_drawer">Open drawer</string>
    <string name="drawer">Drawer</string>
    <string name="basket">Basket</string>
    <string name="profile">Profile</string>
    <string name="picture">Picture</string>
    <string name="settings">Settings</string>
    <string name="logo">Logo</string>
    <string name="non_veg">Non Veg Pizza</string>
    <string name="select_food">Select Food</string>
    <string name="veg">Veg Pizza</string>
    <string name="custom_pizza">Custom Pizza</string>
    <string name="other_food">Other Food</string>
    <string name="update_assortment">Update assortment</string>
    <string name="update_summary">Last update:</string>
    <string name="no_internet">No internet connection</string>
    <string name="unavailable">unavailable</string>

</resources>
