<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="20dp"
        android:text="@string/select_food"
        android:textSize="36sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:textColor="@android:color/darker_gray"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/nonveg"
                    style="@style/LeftImageView"
                    android:contentDescription="@string/non_veg"
                    android:src="@drawable/nonvegpizza" />

                <TextView
                    style="@style/LeftTextView"
                    android:text="@string/non_veg" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/veg"
                    style="@style/RightImageView"
                    android:contentDescription="@string/veg"
                    android:src="@drawable/vegpizza" />

                <TextView
                    style="@style/RightTextView"
                    android:text="@string/veg" />
            </LinearLayout>
        </TableRow>

        <TableRow android:layout_weight="2">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/custom"
                    style="@style/LeftImageView"
                    android:contentDescription="@string/custom_pizza"
                    android:src="@drawable/custompizza" />

                <TextView
                    style="@style/LeftTextView"
                    android:text="@string/custom_pizza" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/other"
                    style="@style/RightImageView"
                    android:contentDescription="@string/other_food"
                    android:src="@drawable/otherfood" />

                <TextView
                    style="@style/RightTextView"
                    android:text="@string/other_food" />
            </LinearLayout>
        </TableRow>
    </TableLayout>

</LinearLayout>